<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="br.com.fiap.LoginViewState" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin">


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:hint="nome" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                tools:hint="Senha" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:enabled="@{!viewState.isLoading}"
                android:text="@string/sign_in"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                tools:text="Login" />

            <TextView
                isVisible="@{viewState.isError}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Usuário ou senha inválidos tente novamente."
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_login" />

            <ProgressBar
                android:id="@+id/pb_loading_button"
                isVisible="@{viewState.isLoading}"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="@id/bt_login"
                app:layout_constraintEnd_toEndOf="@id/bt_login"
                app:layout_constraintTop_toTopOf="@id/bt_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>